fixed some margins and markchecks gaps

--- a/07/02-with flex/styles/style.css
+++ b/07/02-with flex/styles/style.css
@@ -7,14 +7,22 @@
  }
  section{
   padding-bottom: 100px;
+ 
  }
  .page_container{
-  width: 1440px;
+  width: 1200px;
    margin: 0 auto;
  }
  @font-face {
   font-family: Gotham;
   src: url(../fonts/Gotham-Black.ttf);
+ }
+ @font-face {
+  font-family: 'Font Awesome 6 Free';
+  src: url(../fonts/font-awesome/fa-regular-400.ttf) format(.ttf);
+ 
+  font-style: normal;
+  font-weight: normal;
  }
  /* #region Header Styles */
  .header {
@@ -157,7 +165,7 @@ width: 539px;
 .tools_item {
   font-display: column;
     gap: 40px;
-  width: 270px;
+  width: 270px;  
 }
 
 .tools_icon{
@@ -167,7 +175,41 @@ width: 539px;
   border-radius: 15px;
 
 }
+.tlz_icon_clr1{
+  gap: 30px;
+background-color: #7752BE;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ margin-bottom: 30px;
+}
+
+.tlz_icon_clr2{
+  background-color:#FAB005;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.tlz_icon_clr3{
+  background-color:#F03E3D;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.tlz_icon_clr4{
+  background-color:#4DADF7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
 .tools_name{
+
 margin-bottom: 16px;
 color: #2F281E;
 font-size: 22px;
@@ -190,17 +232,19 @@ font-weight: 600;
 }
 /* #endregion */
 
-/* #region Design Professionals Styles */
+/* #region Designer Professionals Styles */
 .designer_container{
   display: flex;
   justify-content: space-around;
+align-items: center;
 
 }
 .designer_left_part{
   line-height: 26px;
-  width: 45%;
+  width: 525px;
   display: flex;
   flex-direction: column;
+  align-items: start;
 }
 .designer_subheading {
   color: #544837;
@@ -219,14 +263,14 @@ font-weight: 600;
 
 .designer_about {
   color: #544837;
- 
+  width: 525px;
   font-weight: 500;
 
   margin-bottom: 40px;
 }
 
 .designer_list {
-
+  width: 525px;
 }
 
 .designer_item {
@@ -267,20 +311,24 @@ font-weight: 600;
 .managers_container {
   display: flex;
   justify-content: space-around;
-
+  
 }
 .managers_left_part {
- width: 50%;
+ 
+ 
 }
 .managers_img {
+  width: 570px;
+  height: 519.6px;
  
 }
 .managers_right_part {
  
   line-height: 26px;
+
   align-items: start;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   flex-direction: column;
   font-size: 16px;
 }
@@ -303,29 +351,45 @@ font-weight: 600;
 }
 
 .manager_list {
-  line-height: 26px;
-  display: flex;
+  list-style-position: outside;
+  display: inline-flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin-bottom: 30px;
- list-style-image: url(../assets/images/icon);
-
+  align-items: flex-start;
+  gap: 30px;
+  
 }
   .manager_item{
     width: 440px;
-    margin-bottom: 30px; 
+    
+}
+
+.checkmark{
+display: flex;
+color: #ffffff;
+
+}
+.checkmark_bg{
+  margin-right: 20px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 10px;
+  background-color: #FF9900;
+ 
 }
 /* #endregion */
 
 /* #region Marketers Styles */
 .marketers_container{
   display: flex;
-  justify-content: space-around;
-
+  justify-content: space-be;
+  align-items: center;
 }
 .marketers_left_part{
   line-height: 26px;
-  width: 45%;
+ 
   display: flex;
   flex-direction: column;
 }
@@ -345,10 +409,13 @@ font-weight: 600;
 }
 .marketers_about {
   color: #544837;
- 
+  width: 486px;
   font-weight: 500;
 
   margin-bottom: 40px;
+}
+.marketers_list{
+  max-width: 486px;
 }
 .marketers_item_name {
   color: #2F281E;
@@ -371,8 +438,8 @@ font-weight: 600;
  
 
 .marketers_img {
-  width: 562px;
-  height: 573px;
+  width: 540px;
+  height: 610px;
   flex-shrink: 0;
 }
 /* #endregion */
@@ -380,24 +447,20 @@ font-weight: 600;
 /* #region Footer Styles*/
 
 .footer {
-
+justify-content: space-between;
 }
 .footer_container {
   display: flex;
   justify-content: space-between;
-flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   padding-bottom: 70px;
 
 
 }
 
-.logo {
-display: flex;
-align-self: baseline;
-}
+ 
 .footer_logo{
-  
+ 
 }
 .footer_list{
 
@@ -423,6 +486,10 @@ margin-bottom: 15px;
 .form_container {
 display: flex;
 flex-direction: column;
+justify-content: flex-start;
+align-items:start;
+width: 280px;
+ 
 }
 
 .phone_input {
@@ -440,10 +507,9 @@ flex-direction: column;
 }
  
 .footer_button {
- 
   width: 180px;
   height: 50px;
   
  
 }
- 
+ /* #endregion */
